# UpTheSky

./: .gitattributes  .gitignore  .gitmodules  Android.mk  AndroidManifest.xml  CMakeLists.txt  LICENSE.txt  Layers.sln  README.md  build.xml  cir.bat  default.properties  gradle.properties  installRun.bat  logcat.bat
Layers/: AnimationSystem.cpp  AudioManager.cpp  BufferManager.cpp  ButtonSystem.cpp  Component.cpp  Entity.cpp  Layer.cpp  Layers.vcxproj  Layers.vcxproj.filters  LayersEngine.cpp  OnUpdateSystem.cpp  RenderSystem.cpp  RendererSystem.cpp  ShaderManager.cpp  SharedPreferences.cpp  TextureManager.cpp  glFunctions.cpp
Layers/include/: AnimationComponent.h  AudioManager.h  BufferManager.h  ButtonComponent.h  ButtonSystem.h  ClassId.h  Component.h  Entity.h  Layer.h  LayersEngine.h  Matrix4x4.h  RenderComponent.h  RenderSystem.h  RenderableComponent.h  RendererSystem.h  SceneData.h  ShaderManager.h  SharedPreferences.h  System.h  TextureComponent.h  TextureManager.h  TransformComponent.h  TransformableComponent.h  UniformsComponent.h  Vector2.h  Vector3.h  glFunctions.h
WallJump/: GameLayer.cpp  GameLayer.h  GhostWall.cpp  GhostWall.h  HighScoreComponent.h  HighScoreUpdateSystem.cpp  LevelManager.cpp  LevelManager.h  MainMenuLayer.cpp  MainMenuLayer.h  Player.cpp  Player.h  PlayerLayer.cpp  PlayerLayer.h  ScoreComponent.h  Scroll.cpp  Scroll.h  StaticColliderComponent.h  WallJump.vcxproj  WallJump.vcxproj.filters  helper.h  main.cpp
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cloud.frag  coin.frag  colorChooser.frag  default.vert  icon.frag  lock.frag  mainMenuButton.frag  mainMenuButtonToggle.frag  money.frag  moneyAlpha.frag  player.frag  playerParticle.frag  score.frag  score.vert  skinChooser.frag  sun.frag
app/src/main/assetsDev/: collectCoinRecording.flac
app/src/main/cpp/layers/layers/: OnWaitFinishedSystem.cpp  RenderSystem.cpp  SharedPreferences.cpp
app/src/main/cpp/layers/layers/include/: OnBackPressedComponent.h  OnUpdateComponent.h  OnUpdateSystem.h  TransformComponent.h  Vector2.h
app/src/main/cpp/walljump/: BackgroundLayer.cpp  CloudComponent.h  CloudSystem.cpp  CloudSystem.h  GameLayer.cpp  HorizontalScrollComponent.h  LethalTriggerComponent.h  LevelManagerHelperComponent.h  LevelManagerSystem.h  MainMenuLayerGraphics.cpp  MainMenuLayerGraphics.h  MainMenuLayerLogic.cpp  MersenneTwisterEngine.cpp  ParticleComponent.h  ParticleSystem.cpp  ScrollComponent.h  ScrollSystem.cpp  ShopLayerGraphics.cpp  ShopLayerGraphics.h  ShopLayerLogic.cpp  ShopLayerLogic.h  helper.cpp
app/src/main/java/de/paultrojahn/UpTheSky/: UpTheSkyActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
assets/: blue.frag  green.frag  levelGeometry.frag  levelGeometryGhost.frag  mainMenuButton.frag  player.frag  score.frag  score.vert  spikes.frag  spikes_left.frag  spikes_right.frag  spikes_up.frag
gradle/wrapper/: gradle-wrapper.properties
jni/: Application.mk
jni/WallJump/: Android.mk  WallJump.sln
jni/WallJump/WallJump/: AnimationsCommon.cpp  AnimationsCommon.h  BackgroundLayer.cpp  BackgroundLayer.h  CloudSystem.cpp  CoinComponent.h  ColorChooserComponent.h  ColorChooserSystem.cpp  ColorChooserSystem.h  GameLayer.cpp  GameOverlayLayer.cpp  GameOverlayLayer.h  GhostWall.cpp  HighScoreUpdateSystem.cpp  Player.cpp  (+34 more)
layers/: AnimationSystem.cpp  AudioManager.cpp  BufferManager.cpp  ClassId.cpp  Entity.cpp  Layer.cpp  LayersEngine.cpp
layers/include/: AnimationComponent.h  AnimationSystem.h  ButtonComponent.h  ButtonSystem.h  Component.h  Entity.h  Layer.h  LayersEngine.h  OnLayerDisabledComponent.h  OnLayerEnabledComponent.h  OnWaitFinishedComponent.h  OnWaitFinishedSystem.h  RenderComponent.h  TextureManager.h  UniformsComponent.h
res/values/: strings.xml
(+24 files in other folders)
